[gd_scene load_steps=14 format=3 uid="uid://cvcskd2hu5fgg"]

[ext_resource type="Texture2D" uid="uid://cvnuf12pfvpcl" path="res://Assets/Mini FX, Items & UI/Common Pick-ups/Coin (16 x 16).png" id="1_bnaep"]
[ext_resource type="Script" path="res://Scripts/coin.gd" id="1_fd11g"]
[ext_resource type="Texture2D" uid="uid://dmkb6k4htpbyq" path="res://Assets/Mini FX, Items & UI/Effects/Yellow_Sparkle (16 x 16).png" id="2_pfxyu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_khduf"]
atlas = ExtResource("2_pfxyu")
region = Rect2(0, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwox0"]
atlas = ExtResource("2_pfxyu")
region = Rect2(20, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyqbw"]
atlas = ExtResource("2_pfxyu")
region = Rect2(40, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vsff"]
atlas = ExtResource("2_pfxyu")
region = Rect2(60, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_btf2p"]
atlas = ExtResource("1_bnaep")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dup5x"]
atlas = ExtResource("1_bnaep")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kymxl"]
atlas = ExtResource("1_bnaep")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4iwu"]
atlas = ExtResource("1_bnaep")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_tq4yw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_khduf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwox0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyqbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vsff")
}],
"loop": false,
"name": &"collect",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_btf2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dup5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kymxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4iwu")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wbso2"]
radius = 6.0
height = 14.0

[node name="coin" type="Area2D"]
collision_layer = 8
script = ExtResource("1_fd11g")

[node name="coinAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tq4yw")
animation = &"idle"
autoplay = "idle"

[node name="colision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_wbso2")

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="animation_finished" from="coinAnimation" to="." method="_on_coin_animation_animation_finished"]
